--- a/Locale/zh-TW.xaml
+++ b/Locale/zh-TW.xaml
@@ -4,22 +4,43 @@
     <sys:String x:Key="AppName">
         幾淨
     </sys:String>
-    <sys:String x:Key="LanguageEnglish">
-        英語
+
+    <!-- General -->
+    <sys:String x:Key="Disabled">
+        禁用
     </sys:String>
-    <sys:String x:Key="LanguageSimplifiedChinese">
-        簡中
+    <sys:String x:Key="Enabled">
+        啟用
     </sys:String>
-    <sys:String x:Key="LanguageTraditionalChinesee">
-        繁中
+    <sys:String x:Key="Blacklist">
+        黑名單
     </sys:String>
-    <sys:String x:Key="LanguageFrench">
-        法語
-    </sys:String>
-    <sys:String x:Key="LanguageRussian">
-        俄語
+    <sys:String x:Key="Whitelist">
+        白名單
     </sys:String>
 
+    <!-- Quick Access -->
+    <sys:String x:Key="QuickAccess">
+        快速訪問
+    </sys:String>
+    <sys:String x:Key="RecentFiles">
+        最近使用的文件
+    </sys:String>
+    <sys:String x:Key="FrequentFolders">
+        常用文件夾
+    </sys:String>
+
+    <!-- Notify Icon -->
+    <sys:String x:Key="Show">
+        顯示
+    </sys:String>
+    <sys:String x:Key="Hide">
+        隱藏
+    </sys:String>
+    <sys:String x:Key="Exit">
+        退出
+    </sys:String>
+    
     <!-- Menu List-->
     <sys:String x:Key="MenuStatus">
         狀態
@@ -32,15 +53,6 @@
     </sys:String>
 
     <!-- Menu Status -->
-    <sys:String x:Key="RecentFiles">
-        最近使用的文件
-    </sys:String>
-    <sys:String x:Key="QuickAccess">
-        快速訪問
-    </sys:String>
-    <sys:String x:Key="FrequentFolders">
-        常用文件夾
-    </sys:String>
     <sys:String x:Key="InBlacklist">
         在黑名單中
     </sys:String>
@@ -58,5 +70,119 @@
     </sys:String>
     <sys:String x:Key="CleanedFolders">
         已清理文件夾
+    </sys:String>
+
+    <!-- Menu Config -->
+    <sys:String x:Key="AppConfig">
+        程序設置
+    </sys:String>
+    <sys:String x:Key="CleanConfig">
+        清理設置
+    </sys:String>
+
+    <!-- App Config -->
+    <sys:String x:Key="LabelTheme">
+        主題
+    </sys:String>
+    <sys:String x:Key="ThemeLight">
+        淺色
+    </sys:String>
+    <sys:String x:Key="ThemeDark">
+        深色
+    </sys:String>
+    <sys:String x:Key="LabelLanguage">
+        語言
+    </sys:String>
+    <sys:String x:Key="LanguageEnglish">
+        英語
+    </sys:String>
+    <sys:String x:Key="LanguageSimplifiedChinese">
+        簡體中文
+    </sys:String>
+    <sys:String x:Key="LanguageTraditionalChinesee">
+        繁體中文
+    </sys:String>
+    <sys:String x:Key="LanguageFrench">
+        法語
+    </sys:String>
+    <sys:String x:Key="LanguageRussian">
+        俄語
+    </sys:String>
+    <sys:String x:Key="LabelAutoStart">
+        自啟動
+    </sys:String>
+    <sys:String x:Key="LabelCloseOption">
+        關閉
+    </sys:String>
+    <sys:String x:Key="CloseOptionHide">
+        隱藏
+    </sys:String>
+    <sys:String x:Key="CloseOptionQuit">
+        退出
+    </sys:String>
+    <sys:String x:Key="LabelSystem">
+        系統
+    </sys:String>
+    <sys:String x:Key="SystemSupport">
+        默認支持
+    </sys:String>
+    <sys:String x:Key="SystemRequireMenuItems">
+        需設置菜單项
+    </sys:String>
+    <sys:String x:Key="LabelVersion">
+        版本
+    </sys:String>
+
+    <!-- Clean Config -->
+    <sys:String x:Key="LabelCleanState">
+        版本
+    </sys:String>
+    <sys:String x:Key="StateStop">
+        停止
+    </sys:String>
+    <sys:String x:Key="StateAuto">
+        自動
+    </sys:String>
+    <sys:String x:Key="StateManual">
+        手動
+    </sys:String>
+    <sys:String x:Key="LabelCleanTrigger">
+        觸發
+    </sys:String>
+    <sys:String x:Key="TriggerPeriod">
+        定期
+    </sys:String>
+    <sys:String x:Key="TriggerMonitor">
+        監控
+    </sys:String>
+    <sys:String x:Key="LabelCleanPolicy">
+        策略
+    </sys:String>
+    <sys:String x:Key="PolicyCleanBlacklist">
+        清理黑名單
+    </sys:String>
+    <sys:String x:Key="PolicyKeepWhitelist">
+        保留白名單
+    </sys:String>
+    <sys:String x:Key="PolicyEmptyList">
+        清空列表
+    </sys:String>
+    <sys:String x:Key="LabelCleanCategory">
+        分類
+    </sys:String>
+    <sys:String x:Key="LabelCleanInterval">
+        間隔
+    </sys:String>
+    <sys:String x:Key="IntervalTenMinutes">
+        10分鐘
+    </sys:String>
+    <sys:String x:Key="IntervalHalfHour">
+        30分鐘
+    </sys:String>
+    <sys:String x:Key="IntervalAnHour">
+        1小時
+    </sys:String>
+    <sys:String x:Key="LabelCleanMenuItems">
+        菜單項
     </sys:String>
 </ResourceDictionary>
