--- a/Themes/Controls.xaml
+++ b/Themes/Controls.xaml
@@ -14,7 +14,7 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
+
     <Style TargetType="{x:Type Button}">
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}" />
         <Setter Property="Background" Value="{DynamicResource Button.Static.Background}" />
@@ -484,6 +484,7 @@
                                 </StackPanel>
                                 <DockPanel Margin="0,0,5,0" HorizontalAlignment="Stretch">
                                     <Image HorizontalAlignment="Left" VerticalAlignment="Top" Margin="4,4,0,0" Source="{Binding Icon, RelativeSource={RelativeSource TemplatedParent}}" Height="24" />
+                                    <!-- https://blog.magnusmontin.net/2013/03/16/how-to-create-a-custom-window-in-wpf/ -->
                                     <TextBlock FontSize="13" Margin="5,3,0,3" VerticalAlignment="Center" HorizontalAlignment="Stretch" TextWrapping="NoWrap" Width="Auto" Foreground="{TemplateBinding Foreground}" Text="{Binding Title, RelativeSource={RelativeSource TemplatedParent}}" Grid.Column="1" TextAlignment="Left" />
                                 </DockPanel>
                             </DockPanel>
@@ -580,6 +581,152 @@
             </Trigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
+
+    <Style x:Key="CloseConfirmDialogStyle" TargetType="{x:Type Window}">
+        <Setter Property="Background" Value="{DynamicResource Window.Static.Background}" />
+        <Setter Property="BorderBrush" Value="{DynamicResource Window.Static.Border}" />
+        <Setter Property="Foreground" Value="{DynamicResource Window.Static.Foreground}" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="WindowStyle" Value="SingleBorderWindow" />
+        <Setter Property="WindowChrome.WindowChrome">
+            <Setter.Value>
+                <!-- In order to have a window shadow, GlassFrameThickness needs to be non-zero which is annoying -->
+                <!-- because the glass frame causes this weird flickering white border when resizing :( -->
+                <!-- Seems like it's the best idea to just put Top to 1 and the rest on 0, because you'll probably notice it less -->
+                <WindowChrome CaptionHeight="26" ResizeBorderThickness="6" CornerRadius="0" GlassFrameThickness="1 0 0 0"
+                              NonClientFrameEdges="None" UseAeroCaptionButtons="False" />
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Window}">
+                    <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
+                        <DockPanel>
+                            <DockPanel Height="30" x:Name="titlebar" Background="{TemplateBinding BorderBrush}" VerticalAlignment="Top" Margin="0" DockPanel.Dock="Top">
+                                <StackPanel Orientation="Horizontal" Grid.Column="0" HorizontalAlignment="Right" DockPanel.Dock="Right">
+                                    <Button x:Name="btnClose" Focusable="False" Background="Transparent" BorderBrush="Transparent" Template="{DynamicResource CloseWindowButton}" Width="40" WindowChrome.IsHitTestVisibleInChrome="True" Click="CloseWindow_Event">
+                                        <Grid Margin="0 1 0 0">
+                                            <Line X1="0" Y1="0" X2="11" Y2="11" Stroke="{DynamicResource ABrush.Glyph.Static}" StrokeThickness="2" />
+                                            <Line X1="0" Y2="0" Y1="11" X2="11" Stroke="{DynamicResource ABrush.Glyph.Static}" StrokeThickness="2" />
+                                        </Grid>
+                                    </Button>
+                                </StackPanel>
+                                <DockPanel Margin="0,0,5,0" HorizontalAlignment="Stretch">
+                                    <Image HorizontalAlignment="Left" VerticalAlignment="Top" Margin="4,4,0,0" Source="{Binding Icon, RelativeSource={RelativeSource TemplatedParent}}" Height="24" />
+                                    <!-- https://blog.magnusmontin.net/2013/03/16/how-to-create-a-custom-window-in-wpf/ -->
+                                    <TextBlock FontSize="13" Margin="5,3,0,3" VerticalAlignment="Center" HorizontalAlignment="Stretch" TextWrapping="NoWrap" Width="Auto" Foreground="{TemplateBinding Foreground}" Text="{Binding Title, RelativeSource={RelativeSource TemplatedParent}}" Grid.Column="1" TextAlignment="Left" />
+                                </DockPanel>
+                            </DockPanel>
+                            <Grid>
+                                <AdornerDecorator>
+                                    <ContentPresenter/>
+                                </AdornerDecorator>
+                                <ResizeGrip x:Name="WindowResizeGrip" HorizontalAlignment="Right" IsTabStop="false" Visibility="Collapsed" VerticalAlignment="Bottom"/>
+                            </Grid>
+                        </DockPanel>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="ResizeMode" Value="CanResizeWithGrip"/>
+                                <Condition Property="WindowState" Value="Normal"/>
+                            </MultiTrigger.Conditions>
+                            <Setter Property="Visibility" TargetName="WindowResizeGrip" Value="Visible"/>
+                        </MultiTrigger>
+                        <Trigger Property="WindowStyle" Value="None">
+                            <Setter TargetName="titlebar" Property="Visibility" Value="Collapsed"/>
+                            <Setter Property="WindowChrome.WindowChrome">
+                                <Setter.Value>
+                                    <WindowChrome CaptionHeight="0" ResizeBorderThickness="6" CornerRadius="0" GlassFrameThickness="1 0 0 0" NonClientFrameEdges="None" UseAeroCaptionButtons="False" />
+                                </Setter.Value>
+                            </Setter>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="WindowState" Value="Maximized">
+                <Setter Property="BorderThickness" Value="8" />
+            </Trigger>
+            <Trigger Property="WindowState" Value="Normal">
+                <Setter Property="BorderThickness" Value="1" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="CustomMessageBoxStyle" TargetType="{x:Type Window}">
+        <Setter Property="Background" Value="{DynamicResource Window.Static.Background}" />
+        <Setter Property="BorderBrush" Value="{DynamicResource Window.Static.Border}" />
+        <Setter Property="Foreground" Value="{DynamicResource Window.Static.Foreground}" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="WindowStyle" Value="SingleBorderWindow" />
+        <Setter Property="WindowChrome.WindowChrome">
+            <Setter.Value>
+                <!-- In order to have a window shadow, GlassFrameThickness needs to be non-zero which is annoying -->
+                <!-- because the glass frame causes this weird flickering white border when resizing :( -->
+                <!-- Seems like it's the best idea to just put Top to 1 and the rest on 0, because you'll probably notice it less -->
+                <WindowChrome CaptionHeight="26" ResizeBorderThickness="6" CornerRadius="0" GlassFrameThickness="1 0 0 0"
+                              NonClientFrameEdges="None" UseAeroCaptionButtons="False" />
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Window}">
+                    <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
+                        <DockPanel>
+                            <DockPanel Height="30" x:Name="titlebar" Background="{TemplateBinding BorderBrush}" VerticalAlignment="Top" Margin="0" DockPanel.Dock="Top">
+                                <StackPanel Orientation="Horizontal" Grid.Column="0" HorizontalAlignment="Right" DockPanel.Dock="Right">
+                                    <Button x:Name="btnClose" Focusable="False" Background="Transparent" BorderBrush="Transparent" Template="{DynamicResource CloseWindowButton}" Width="40" WindowChrome.IsHitTestVisibleInChrome="True" Click="CloseWindow_Event">
+                                        <Grid Margin="0 1 0 0">
+                                            <Line X1="0" Y1="0" X2="11" Y2="11" Stroke="{DynamicResource ABrush.Glyph.Static}" StrokeThickness="2" />
+                                            <Line X1="0" Y2="0" Y1="11" X2="11" Stroke="{DynamicResource ABrush.Glyph.Static}" StrokeThickness="2" />
+                                        </Grid>
+                                    </Button>
+                                </StackPanel>
+                                <DockPanel Margin="0,0,5,0" HorizontalAlignment="Stretch">
+                                    <Image HorizontalAlignment="Left" VerticalAlignment="Top" Margin="4,4,0,0" Source="{Binding Icon, RelativeSource={RelativeSource TemplatedParent}}" Height="24" />
+                                    <!-- https://blog.magnusmontin.net/2013/03/16/how-to-create-a-custom-window-in-wpf/ -->
+                                    <TextBlock FontSize="13" Margin="5,3,0,3" VerticalAlignment="Center" HorizontalAlignment="Stretch" TextWrapping="NoWrap" Width="Auto" Foreground="{TemplateBinding Foreground}" Text="{Binding Title, RelativeSource={RelativeSource TemplatedParent}}" Grid.Column="1" TextAlignment="Left" />
+                                </DockPanel>
+                            </DockPanel>
+                            <Grid>
+                                <AdornerDecorator>
+                                    <ContentPresenter/>
+                                </AdornerDecorator>
+                                <ResizeGrip x:Name="WindowResizeGrip" HorizontalAlignment="Right" IsTabStop="false" Visibility="Collapsed" VerticalAlignment="Bottom"/>
+                            </Grid>
+                        </DockPanel>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="ResizeMode" Value="CanResizeWithGrip"/>
+                                <Condition Property="WindowState" Value="Normal"/>
+                            </MultiTrigger.Conditions>
+                            <Setter Property="Visibility" TargetName="WindowResizeGrip" Value="Visible"/>
+                        </MultiTrigger>
+                        <Trigger Property="WindowStyle" Value="None">
+                            <Setter TargetName="titlebar" Property="Visibility" Value="Collapsed"/>
+                            <Setter Property="WindowChrome.WindowChrome">
+                                <Setter.Value>
+                                    <WindowChrome CaptionHeight="0" ResizeBorderThickness="6" CornerRadius="0" GlassFrameThickness="1 0 0 0" NonClientFrameEdges="None" UseAeroCaptionButtons="False" />
+                                </Setter.Value>
+                            </Setter>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="WindowState" Value="Maximized">
+                <Setter Property="BorderThickness" Value="8" />
+            </Trigger>
+            <Trigger Property="WindowState" Value="Normal">
+                <Setter Property="BorderThickness" Value="1" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
 
     <ControlTemplate x:Key="TextBoxErrorTemplate">
         <StackPanel IsHitTestVisible="False">
@@ -2131,6 +2278,75 @@
                             <ContentPresenter ContentSource="Header" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
                         </Border>
                         <ContentPresenter Grid.ColumnSpan="2" Grid.Column="1" Margin="{TemplateBinding Padding}" Grid.Row="2" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="OriginGroupBox" TargetType="{x:Type GroupBox}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type GroupBox}">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <Border Grid.Row="0"
+                  BorderThickness="1"
+                  CornerRadius="2,2,0,0">
+                            <Border.BorderBrush>
+                                <LinearGradientBrush StartPoint="0,0"
+                                   EndPoint="0,1">
+                                    <LinearGradientBrush.GradientStops>
+                                        <GradientStopCollection>
+                                            <GradientStop Color="#FFCCCCCC"
+                                  Offset="0.0" />
+                                            <GradientStop Color="#FF444444"
+                                  Offset="1.0" />
+                                        </GradientStopCollection>
+                                    </LinearGradientBrush.GradientStops>
+                                </LinearGradientBrush>
+                            </Border.BorderBrush>
+
+                            <Border.Background>
+                                <LinearGradientBrush StartPoint="0,0"
+                                   EndPoint="0,1">
+                                    <LinearGradientBrush.GradientStops>
+                                        <GradientStopCollection>
+                                            <GradientStop Color="White"
+                                  Offset="0.0" />
+                                            <GradientStop Color="#FF7381F9"
+                                  Offset="1.0" />
+                                        </GradientStopCollection>
+                                    </LinearGradientBrush.GradientStops>
+                                </LinearGradientBrush>
+                            </Border.Background>
+
+                            <ContentPresenter Margin="4"
+                              ContentSource="Header"
+                              RecognizesAccessKey="True" />
+                        </Border>
+
+                        <Border Grid.Row="1"
+                  BorderThickness="1,0,1,1"
+                  CornerRadius="0,0,2,2">
+                            <Border.BorderBrush>
+                                <SolidColorBrush Color="#FF888888" />
+                            </Border.BorderBrush>
+                            <Border.Background>
+                                <LinearGradientBrush EndPoint="0.5,1"
+                                   MappingMode="RelativeToBoundingBox"
+                                   StartPoint="0.5,0">
+                                    <GradientStop Color="#FFC5CBF9"
+                              Offset="0" />
+                                    <GradientStop Color="#FF7381F9"
+                              Offset="1" />
+                                </LinearGradientBrush>
+                            </Border.Background>
+                            <ContentPresenter Margin="4" />
+                        </Border>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
